[package]
name = "nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
fermium = { version  = "22605", default-features = false }
glow = "0.13"
bytemuck = { version = "1.9", features = ["derive"] }
glam = { version = "0.28", features = ["bytemuck"] }
fontdue = "0.9"
png = "0.17"

# Optional
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["ldtk"]
ldtk = ["serde", "serde_json"]