[package]
name = "nova"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
sdl3-sys = { version = "0.1.3" }
glow = "0.16"
bytemuck = { version = "1.20", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
fontdue = "0.9"
png = "0.17"

# Optional
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["ldtk"]
ldtk = ["serde", "serde_json"]
static_bundled_build = [
    "sdl3-sys/build-from-source-static",
] # TODO: Probably split this up
serde = ["dep:serde", "glam/serde"]
